2010-11-25  Stefan Kost  <ensonic@users.sf.net>

	* src/bmltest_info.c:
	  Add a comment about an issue on x86 when not having any win32 dlls.

2010-10-06  Stefan Kost  <ensonic@users.sf.net>

	* dllwrapper/wine/ldt_keeper.c:
	  Init a var.

2010-09-24  Stefan Kost  <ensonic@users.sf.net>

	* src/BuzzMachineLoader/BuzzMachineLoader.cpp:
	  Use {} for if statements then have a DBG output to fix release
	  versions with debug turned off.

2010-09-21  Stefan Kost  <ensonic@users.sf.net>

	* Makefile.am:
	  Remove some more shave leftovers.

2010-05-17  Stefan Kost  <ensonic@users.sf.net>

	* TODO:
	  update some findings.

	* dllwrapper/wine/module.c:
	  Put out libdir earlier in the internal search path. Also don't build
	  list of failed dirs, as this is never used anyway.

2010-05-13  Stefan Kost  <ensonic@users.sf.net>

	* autogen.sh:
	  Also kill shave from default args.

	* configure.ac:
	* src/Makefile.am:
	  Make libbml versioned.

	* dllwrapper/wine/stubs.s:
	* src/BuzzMachineLoader/BuzzMachineLoader.cpp:
	  Add comments.

2010-04-16  Stefan Kost  <ensonic@users.sf.net>

	* configure.ac:
	* shave.in (deleted):
	* shave-libtool.in (deleted):
	  Get rid of shave and switch to automake silent rules if available.

2010-04-13  Stefan Kost  <ensonic@users.sf.net>

	patch by: Sebastian Dröge <slomo@circular-chaos.org>

	* src/BuzzMachineLoader/Makefile.am:
	* src/Makefile.am:
	* src/bml.c:
	  Use pkgdir for dlopened libraries.

2010-03-30  Stefan Kost  <ensonic@users.sf.net>

	* configure.ac:
	  Improve checking of non-std install prefix.

2010-03-29  Stefan Kost  <ensonic@users.sf.net>

	* dllwrapper/wine/ldt_keeper.c:
	  Remove wrong copyright header. Upstream versions in xine/mplayer
	  repositories don't have this and the legal notice from xine (included
	  in README one level up) also states that this code is LGPL.

2010-02-03  Stefan Kost  <ensonic@users.sf.net>

	* TODO:
	  Update stats.

	* dllwrapper/wine/Makefile.am:
	  Remove obsolete comment.
